# backrefs

./: .coveragerc  .dictionary  .gitignore  .prospector.yml  .pyspelling.yml  .spelling.yml  .travis.yml  404.html  LICENSE  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  hatch_build.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini  zensical.yml
.github/: labels.yml
.github/workflows/: build.yml  deploy.yml  pullrequest.yml
_snippets/: links.txt
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
about/security/: index.html
backrefs/: __init__.py  __meta__.py  _bre_parse.py  _bregex_parse.py  _bregex_typing.py  bre.py  bregex.py  common_tokens.py  compat.py  pep562.py  util.py
backrefs/uniprops/: __init__.py
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  license.md  usage.md
docs/snippets/: links.md
docs/src/dictionary/: en-custom.txt  en-python.txt
docs/src/markdown/: changelog.md  contributing.md  index.md  installation.md  license.md  refs.md  usage.md
docs/src/markdown/_snippets/: links.md  links.txt
docs/src/markdown/about/: changelog.md  contributing.md  license.md
installation/: index.html
license/: index.html
refs/: index.html
requirements/: docs.txt  flake8.txt  project.txt  test.txt
search/: search_index.json
tests/: .~c9_invoke_v2vC8.py  spellcheck.py  test_age.py  test_bidiclass.py  test_bidipairedbrackettype.py  test_binary.py  test_block.py  test_bre.py  test_bregex.py  test_canonicalcombiningclass.py  test_decompositiontype.py  test_eastasianwidth.py  test_generalcategory.py  test_graphemeclusterbreak.py  test_hangulsyllabletype.py  test_indicpositionalcategory.py  test_indicsylabiccategory.py  test_joininggroup.py  test_joiningtype.py  test_linebreak.py  test_numerictype.py  test_numericvalue.py  test_posix.py  test_quickcheck.py  test_script.py  test_scriptextensions.py  test_sentencebreak.py  test_uniprops.py  test_versions.py  test_verticalorientation.py  test_wordbreak.py
tools/: gh_labels.py  unidatadownload.py  unipropgen.py
usage/: index.html
